--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,25 @@
-image: docker:latest
+---
+image: 'docker:latest'
 
 services:
-  - docker:dind
+  - 'docker:dind'
 
 before_script:
-  - docker info
-  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+  - 'docker info'
+  - 'docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY'
 
 variables:
-  DOCKER_HOST: tcp://localhost:2375
+  DOCKER_HOST: 'tcp://localhost:2375'
   DOCKER_DRIVER: overlay2
-  IMAGE_PROD_NAME: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
+  IMAGE_PROD_NAME: '$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME'
   REGISTRY: quay.io
   IMAGE_NAME: zabra-container
-  REGISTRY_USER: your_org # we set this to override to samsung_cnct in gitlab Group Variables
+  # we set this to override to samsung_cnct in gitlab Group Variables
+  REGISTRY_USER: your_org
   ROBOT_ACCOUNT: zabra_container_rw
-# Create a Gitlab Secret Variable called REGISTRY_PASSWORD and assign it the value of the registry robot docker login password.
-# DO NOT PASTE THIS PASSWORD HERE.
+  # Create a Gitlab Secret Variable called REGISTRY_PASSWORD and assign it the
+  # value of the registry robot docker login password.
+  # DO NOT PASTE THIS PASSWORD HERE.
 
 stages:
   - build
@@ -25,15 +28,15 @@ stages:
 
 build-branch:
   variables:
-    IMAGE_DEVL_NAME: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME-$CI_JOB_ID
+    IMAGE_DEVL_NAME: '$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME-$CI_JOB_ID'
   stage: build
   only:
     - branches
   except:
     - master
   script:
-  - docker build -t $IMAGE_DEVL_NAME .
-  - docker push $IMAGE_DEVL_NAME
+    - 'docker build -t $IMAGE_DEVL_NAME .'
+    - 'docker push $IMAGE_DEVL_NAME'
 
 build-master:
   stage: build
@@ -41,31 +44,29 @@ build-master:
     - master
     - tags
   script:
-  - docker build -t $IMAGE_PROD_NAME .
-  - docker push $IMAGE_PROD_NAME
+    - 'docker build -t $IMAGE_PROD_NAME .'
+    - 'docker push $IMAGE_PROD_NAME'
 
 # Tests go here!
 # test:
-#    stage: test
+#   stage: test
 
 publish-master:
   stage: publish
   only:
     - master
   script:
-  - docker pull $IMAGE_PROD_NAME
-  - docker login ${REGISTRY} -u ${REGISTRY_USER}+${ROBOT_ACCOUNT} -p ${REGISTRY_PASSWORD}
-  # Any merge to master (i.e. a successful CI pass) will be tagged and pushed as latest
-  - docker tag ${IMAGE_PROD_NAME} ${REGISTRY}/${REGISTRY_USER}/${IMAGE_NAME}:latest
-  - docker push ${REGISTRY}/${REGISTRY_USER}/${IMAGE_NAME}:latest
+    - 'docker pull $IMAGE_PROD_NAME'
+    - 'docker login ${REGISTRY} -u ${REGISTRY_USER}+${ROBOT_ACCOUNT} -p ${REGISTRY_PASSWORD}'
+    - 'docker tag ${IMAGE_PROD_NAME} ${REGISTRY}/${REGISTRY_USER}/${IMAGE_NAME}:latest'
+    - 'docker push ${REGISTRY}/${REGISTRY_USER}/${IMAGE_NAME}:latest'
 
 publish-version-tag:
   stage: publish
   only:
-    - /v[0-9]+\.[0-9]+(\.[0-9]+[a-z]?)?/
+    - '/v[0-9]+\.[0-9]+(\.[0-9]+[a-z]?)?/'
   script:
-  - docker pull $IMAGE_PROD_NAME
-  - docker login ${REGISTRY} -u ${REGISTRY_USER}+${ROBOT_ACCOUNT} -p ${REGISTRY_PASSWORD}
-  # A tag push to master will be pushed to Quay with that tag
-  - docker tag ${IMAGE_PROD_NAME} ${REGISTRY}/${REGISTRY_USER}/${IMAGE_NAME}:$CI_COMMIT_TAG
-  - docker push ${REGISTRY}/${REGISTRY_USER}/${IMAGE_NAME}:$CI_COMMIT_TAG
+    - 'docker pull $IMAGE_PROD_NAME'
+    - 'docker login ${REGISTRY} -u ${REGISTRY_USER}+${ROBOT_ACCOUNT} -p ${REGISTRY_PASSWORD}'
+    - 'docker tag ${IMAGE_PROD_NAME} ${REGISTRY}/${REGISTRY_USER}/${IMAGE_NAME}:$CI_COMMIT_TAG'
+    - 'docker push ${REGISTRY}/${REGISTRY_USER}/${IMAGE_NAME}:$CI_COMMIT_TAG'
